...
    // MARK: - Body
    var body: some View {
        ZStack {
            background
            contentView
        }
        .navigationTitle("People")
        .toolbar {
            ToolbarItem(placement: .primaryAction) { create }
        }
        .sheet(isPresented: vm.shouldShowCreate) {
            vm.navigateToCreate {
                haptic(.success)
...
                .font(
                    .system(.headline, design: .rounded)
                    .bold()
                )
        }
        .disabled(vm.isLoading)
        .accessibilityIdentifier("create_button")
    }
    
    @ViewBuilder
    var gridView: some View {
        ScrollView {
            LazyVGrid(columns: columns,
...
